--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -3,19 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Jog On Times</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
   <script src="js/app.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/locale/uk.js"></script>
   <script src="js/headlinesController.js"></script>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
 </head>
 <body>
+	
+
 	<main ng-controller="HeadlineController as headlines">
-		<li ng-repeat="headline in headlines.getHeadlines">
-      <strong>{{ headline.headline[0] }}</strong>
-      <input type="text" placeholder="fuck yeah">
-      <strong>{{ headline.headline[1] }}</strong>
-    </li>
+	<nav class="navbar">
+		<div class="title">
+			<h1>Jog On Times</h1>
+		</div>
+	</nav>
+		<div class="wrapper" ui-view></div>
 	</main>
 	
 	
