basic div layout added, quiz route added

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -15,12 +15,29 @@
 	
 
 	<main ng-controller="HeadlineController as headlines">
-	<nav class="navbar">
-		<div class="title">
+	<nav id="navbar">
+		<div id="title">
 			<h1>Jog On Times</h1>
 		</div>
+		<div id="time-date">
+			
+		</div>
 	</nav>
-		<div class="wrapper" ui-view></div>
+	<div id="left-sidebar">
+		<div id="instructions">
+			
+		</div>
+		<div id="year">
+			
+		</div>
+		<div id="category">
+			
+		</div>
+	</div>
+	<div id="wrapper" ui-view></div>
+	<div id="scoreboard">
+		
+	</div>
 	</main>
 	
 	
