--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -5,11 +5,13 @@
 	<title>Jog On Times</title>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
-  <script src="js/app.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/locale/uk.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/app.js"></script>
   <script src="js/headlinesController.js"></script>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
+  <link rel="stylesheet" href="css/materialize.css">
 </head>
 <body>
 	
@@ -25,13 +27,17 @@
 	</nav>
 	<div id="left-sidebar">
 		<div id="instructions">
-			
+			<h3 class="instructions-title">
+				<p class="instructions-text">
+					
+				</p>
+			</h3>
 		</div>
 		<div id="year">
-			
+			<h4 class="year-display">Year: </h4>
 		</div>
 		<div id="category">
-			
+			<h4 class="category-display">Category: </h4>
 		</div>
 	</div>
 	<div id="wrapper" ui-view></div>
