--- a/frontEnd/quiz.html
+++ b/frontEnd/quiz.html
@@ -1,6 +1,6 @@
 
 <li ng-repeat="headline in headlines.getHeadlines">
       <strong>{{ headline.headline[0] }}</strong>
-      <input id ="headline-answer" type="text" placeholder="fuck yeah">
+      <input id ="headline-answer" type="text" autofocus>
       <strong>{{ headline.headline[1] }}</strong>
     </li>
