--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -19,7 +19,7 @@
 	<main ng-controller="HeadlineController as headlines">
 	<nav id="navbar">
 		<div id="title-container">
-			<h1 id="title">Jog On Times</h1>
+			<h1 id="title">Jog-on Times</h1>
 		</div>
 		<div id="time-date">
 			
