final commits before merge

--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -1,1 +1,3 @@
-<div class="login-container" ng-controller="localStorageController as local"></div>
+<div class="login-container" ng-controller="localStorageController as local">
+	<form ng-submit="" class="login-form"></form>
+</div>
