fixed bug in data load

--- a/frontEnd/quiz.html
+++ b/frontEnd/quiz.html
@@ -1,5 +1,5 @@
 
-<li>
+<li ng-init='headlines.getData()'>
   <div class = "question-text" ng-init= "Q1 = true" ng-show= "Q1" class= "ng-hide">
         <h2>1</h2>
         {{headlines.getHeadlines[0].headline[0]}}
