removed some commented-out code

--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -1,3 +1,7 @@
 <div class="login-container" ng-controller="localStorageController as local">
-	<form ng-submit="" class="login-form"></form>
+	<form ng-submit="local.saveName()" class="login-form">
+		<label for="login-input">Enter your name: </label>
+		<input type="text" name="login-input" ng-model="local.name">
+		<input type="submit">
+	</form>
 </div>
