made a partial for navbar

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -17,14 +17,9 @@
 	
 
 	<main ng-controller="HeadlineController as headlines">
-	<nav id="navbar">
-		<div id="title-container">
-			<h1 id="title">Jog-on Times</h1>
-		</div>
-		<div id="time-date">
-			
-		</div>
-	</nav>
+
+	<div ng-include="'navbar.html'"></div>
+
 	<div class="container">
 		<div class="row">
 			<div id="left-sidebar" class="col s3">
