name storing to object in localStorage

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -9,6 +9,7 @@
   <script src="js/materialize.js"></script>
   <script src="js/app.js"></script>
   <script src="js/headlinesController.js"></script>
+  <script src="js/localStorageController.js"></script>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/materialize.css">
