--- a/frontEnd/quiz.html
+++ b/frontEnd/quiz.html
@@ -1,11 +1,22 @@
 
 <li ng-init='headlines.getData()'>
-  <div class = "question-text" ng-init= "Q1 = true" ng-show= "Q1" class= "ng-hide">
+  <div class = "question-text" ng-init= "Q1 = true; A1 = false" ng-show= "Q1" class= "ng-hide">
         <h2>1</h2>
         {{headlines.getHeadlines[0].headline[0]}}
         <input ng-model = "headlines.answer" id ="headline-answer" type="text" autofocus>
         {{headlines.getHeadlines[0].headline[1]}}
-        <button class='submit' ng-click="Q2 = true; Q1 = false; headlines.updateScore()" >submit</button>
+        <button class='submit' ng-click="Q1 = false; A1 = true; headlines.updateScore()" >submit</button>
+  </div>
+
+  <div class="question-text" ng-show = "A1" class = "ng-hide"> 
+    <h3>Answer: </h3>
+    {{headlines.getHeadlines[0].headline[0]}}
+    
+    <span ng-class="{true: 'show-answer-right', false: 'show-answer-wrong'}[headlines.answer == headlines.getHeadlines[0].blankWord ]">
+    {{headlines.getHeadlines[0].blankWord}}</span>
+
+    {{headlines.getHeadlines[0].headline[1]}}
+    <button class='submit' ng-click="Q2 = true; A1 = false; headlines.clearAnswer()" >Next question</button>
   </div>
 
   <div class = "question-text" ng-show= "Q2" class="ng-hide"> 
@@ -14,7 +25,7 @@
         <input ng-model = "headlines.answer" id ="headline-answer" type="text" autofocus>
         {{headlines.getHeadlines[1].headline[1]}}
         <button class='submit' ng-click="Q3 = true; Q2 = false; headlines.updateScore()" >submit</button>
-  </div>
+  </div> 
 
    <div class = "question-text" ng-show= "Q3" class="ng-hide">
         <h2>3</h2>
