Instructions and font consistent

--- a/frontEnd/setup.html
+++ b/frontEnd/setup.html
@@ -1,20 +1,19 @@
 
 <form>
-  <h3>Select year (1851-2015)</h3>
+  <h3 class="select-year">Select year (1851-2015)</h3>
   <input type="text" ng-model = "headlines.year" autofocus>
 
-  
-  <h3>Select your category </h3>
+  <h3 class="select-category">Select your category </h3>
     <select ng-model = "headlines.category" ng-change='headlines.saveSetup()'>
-        <option value="" disabled selected>Choose your option</option>
-        <option value="Arts" selected>Arts</option>
-        <option value="Books">Books</option>
-        <option value="Business">Business</option>
-        <option value="Movies">Movies</option>
-        <option value="Sports">Sports</option>
-        <option value="National">National</option>
-        <option value="Politics">Politics</option>
-        <option value="International">International</option>
+      <option value="" disabled selected>Choose your option</option>
+      <option value="Arts" selected>Arts</option>
+      <option value="Books">Books</option>
+      <option value="Business">Business</option>
+      <option value="International">International</option>
+      <option value="National">National</option>
+      <option value="Politics">Politics</option>
+      <option value="Movies">Movies</option>
+      <option value="Sports">Sports</option>
       </select>
   
 <button ng-click='headlines.getData()' ui-sref="quiz" type="submit">Submit </button>
