--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="jogOnTimesApp">
 <head>
 	<meta charset="UTF-8">
-	<title>Jog On Times</title>
+	<title>The New York Time Travel Quiz</title>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/locale/uk.js"></script>
@@ -24,18 +24,11 @@
 	<div class="container">
 		<div class="row">
 			<div id="left-sidebar" class="col s3">
-				<div id="instructions">
-					<h3 class="instructions-title">
-						<p class="instructions-text">
-							
-						</p>
-					</h3>
-				</div>
 				<div id="year">
-					<h4 class="year-display">Year: </h4>
+					<h4 class="year-display">Year: {{ headlines.year }}</h4>
 				</div>
 				<div id="category">
-					<h4 class="category-display">Category: </h4>
+					<h4 class="category-display">Category: {{ headlines.category }}</h4>
 				</div>
 			</div>
 			<div id="quiz-box" class="col s6" ui-view></div>
