--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -1,6 +1,14 @@
+<div id="instructions">
+  <p class="instructions-text">
+    Test your knowledge of history with our newspaper-headlines quiz. We'll give you nine headlines with a random word removed. If you type the right word, you win a point.
+  </p>
+  <p class="instructions-text">
+  Have a good trip and we'll see you back in the future.
+  </p>
+
 <div class="login-container" ng-controller="LocalStorageController as local">
 
-		<label for="login-input">Enter your name: </label>
+    <label for="login-input">Enter your name: </label>
 		<input type="text" name="login-input" ng-model="local.name">
 		<input type="submit" ng-click="local.saveName(e)" ui-sref="setup">
 
