--- a/frontEnd/navbar.html
+++ b/frontEnd/navbar.html
@@ -1,6 +1,6 @@
 <nav id="navbar">
 	<div id="title-container">
-		<h1 id="title">Jog-on Times</h1>
+		<h1 id="title">The New York Time Travel</h1>
 	</div>
 	<div id="time-date">
 		
