--- a/frontEnd/quiz.html
+++ b/frontEnd/quiz.html
@@ -1,75 +1,75 @@
 
 <li ng-init='headlines.getData()'>
   <div class = "question-text" ng-init= "Q1 = true" ng-show= "Q1" class= "ng-hide">
-        <h2>1</h2>
+        <h2>Question 1</h2>
         {{headlines.getHeadlines[0].headline[0]}}
         <input ng-model = "headlines.answer" id ="headline-answer" type="text" autofocus>
         {{headlines.getHeadlines[0].headline[1]}}
-        <button class='submit' ng-click="Q2 = true; Q1 = false; headlines.updateScore()" >submit</button>
+        <p><button class='submit' ng-click="Q2 = true; Q1 = false; headlines.updateScore()" >submit</button></p>
   </div>
 
   <div class = "question-text" ng-show= "Q2" class="ng-hide"> 
-        <h2>2</h2>
+        <h2>Question 2</h2>
         {{headlines.getHeadlines[1].headline[0]}}
         <input ng-model = "headlines.answer" id ="headline-answer" type="text" autofocus>
         {{headlines.getHeadlines[1].headline[1]}}
-        <button class='submit' ng-click="Q3 = true; Q2 = false; headlines.updateScore()" >submit</button>
+        <p><button class='submit' ng-click="Q3 = true; Q2 = false; headlines.updateScore()" >submit</button></p>
   </div>
 
    <div class = "question-text" ng-show= "Q3" class="ng-hide">
-        <h2>3</h2>
+        <h2>Question 3</h2>
         {{headlines.getHeadlines[2].headline[0]}}
         <input ng-model = "headlines.answer" id ="headline-answer" type="text" autofocus>
         {{headlines.getHeadlines[2].headline[1]}}
-        <button class='submit' ng-click="Q4 = true; Q3 = false; headlines.updateScore()" >submit</button>
+        <p><button class='submit' ng-click="Q4 = true; Q3 = false; headlines.updateScore()" >submit</button></p>
   </div>
 
    <div class = "question-text" ng-show= "Q4" class="ng-hide">
-        <h2>4</h2>
+        <h2>Question 4</h2>
         {{headlines.getHeadlines[3].headline[0]}}
         <input ng-model = "headlines.answer" id ="headline-answer" type="text" autofocus>
         {{headlines.getHeadlines[3].headline[1]}}
-        <button class='submit' ng-click="Q5 = true; Q4 = false; headlines.updateScore()" >submit</button>
+        <p><button class='submit' ng-click="Q5 = true; Q4 = false; headlines.updateScore()" >submit</button></p>
   </div>
 
   <div class = "question-text" ng-show= "Q5" class="ng-hide">
-        <h2>5</h2>
+        <h2>Question 5</h2>
         {{headlines.getHeadlines[4].headline[0]}}
         <input ng-model = "headlines.answer" id ="headline-answer" type="text" autofocus>
         {{headlines.getHeadlines[4].headline[1]}}
-        <button class='submit' ng-click="Q6 = true; Q5 = false; headlines.updateScore()" >submit</button>
+        <p><button class='submit' ng-click="Q6 = true; Q5 = false; headlines.updateScore()" >submit</button></p>
   </div>
 
   <div class = "question-text" ng-show= "Q6" class="ng-hide">
-        <h2>6</h2>
+        <h2>Question 6</h2>
         {{headlines.getHeadlines[5].headline[0]}}
         <input ng-model = "headlines.answer" id ="headline-answer" type="text" autofocus>
         {{headlines.getHeadlines[5].headline[1]}}
-        <button class='submit' ng-click="Q7 = true; Q6 = false; headlines.updateScore()" >submit</button>
+        <p><button class='submit' ng-click="Q7 = true; Q6 = false; headlines.updateScore()" >submit</button></p>
   </div>
 
   <div class = "question-text" ng-show= "Q7" class="ng-hide">
-        <h2>7</h2>
+        <h2>Question 7</h2>
         {{headlines.getHeadlines[6].headline[0]}}
         <input ng-model = "headlines.answer" id ="headline-answer" type="text" autofocus>
         {{headlines.getHeadlines[6].headline[1]}}
-        <button class='submit' ng-click="Q8 = true; Q7 = false; headlines.updateScore()">submit</button>
+        <p><button class='submit' ng-click="Q8 = true; Q7 = false; headlines.updateScore()">submit</button></p></div>
   </div>
 
   <div class = "question-text" ng-show= "Q8" class="ng-hide">
-        <h2>8</h2> 
+        <h2>Question 8</h2> 
         {{headlines.getHeadlines[7].headline[0]}}
         <input ng-model = "headlines.answer" id ="headline-answer" type="text" autofocus>
         {{headlines.getHeadlines[7].headline[1]}}
-        <button class='submit' ng-click="Q9 = true; Q8 = false; headlines.updateScore()">submit</button>
+        <p><button class='submit' ng-click="Q9 = true; Q8 = false; headlines.updateScore()">submit</button></p>
   </div>
 
   <div class = "question-text" ng-show= "Q9" class="ng-hide">
-        <h2>9</h2>
+        <h2>Question 9</h2>
         {{headlines.getHeadlines[8].headline[0]}}
         <input ng-model = "headlines.answer" id ="headline-answer" type="text" autofocus>
         {{headlines.getHeadlines[8].headline[1]}}
-        <button class='submit' ng-click="Q10 = true; Q9 = false; headlines.updateScore()">submit</button>
+        <p><button class='submit' ng-click="Q10 = true; Q9 = false; headlines.updateScore()">submit</button></p>
   </div>
 
 </li>
