fixed final submit button error

--- a/frontEnd/quiz.html
+++ b/frontEnd/quiz.html
@@ -178,7 +178,7 @@
     <span ng-class="{true: 'show-answer-right', false: 'show-answer-wrong'}[headlines.answer == headlines.getHeadlines[8].blankWord ]">
     {{headlines.getHeadlines[8].blankWord}}</span>
 
-        <button class='submit' ng-click="headlines.updateScore()" ui-sref="score">submit</button>
+        <button class='submit' ui-sref="score">submit</button>
   </div>
 
 </li>
