changed font sizes

--- a/frontEnd/quiz.html
+++ b/frontEnd/quiz.html
@@ -3,7 +3,7 @@
 
 
   <div class = "question-text" ng-init= "Q1 = true; A1 = false" ng-show= "Q1" class= "ng-hide">
-        <h2>1</h2>
+        <h2>Question 1</h2>
         {{headlines.getHeadlines[0].headline[0]}}
         <input ng-model = "headlines.answer" id ="headline-answer" type="text" autofocus>
         {{headlines.getHeadlines[0].headline[1]}}
