Button on setup page styled with consistent font

--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -3,7 +3,7 @@
     Test your knowledge of history with our newspaper-headlines quiz. We'll give you nine headlines with a random word removed. If you type the right word, you win a point.
   </p>
   <p class="instructions-text">
-  Have a good trip and we'll see you back in the future.
+  Have a good trip and we'll see you on the other side.
   </p>
 
 <div class="login-container" ng-controller="LocalStorageController as local">
