--- a/frontEnd/setup.html
+++ b/frontEnd/setup.html
@@ -16,7 +16,9 @@
       <option value="Sports">Sports</option>
       </select>
   
-<button ng-click='headlines.getData()' ui-sref="quiz" type="submit">Submit </button>
+  <p>
+    <button class="submit-button" ng-click='headlines.getData()' ui-sref="quiz" type="submit">Submit </button>
+  </p>
 
 
 </form>
