--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -8,8 +8,9 @@
 
 <div class="login-container" ng-controller="LocalStorageController as local">
 
-    <label for="login-input">Enter your name: </label>
-		<input type="text" name="login-input" ng-model="local.name">
-		<input type="submit" ng-click="local.saveName(e)" ui-sref="setup">
+     <label class ="login-label" for="login-input">Enter your name: </label>
+     <br>
+		 <input type="text" class="login" name="login-input" ng-model="local.name">
+		 <input type="submit" ng-click="local.saveName(e)" ui-sref="setup">
 
 </div>
