--- a/frontEnd/score.html
+++ b/frontEnd/score.html
@@ -1,3 +1,5 @@
-<h1>You scored {{ headlines.score }}/9</h1>
+<div class="score-page">
+	<h1 class="quiz-score">You scored {{ headlines.score }}/9</h1>
 
-<h3 ui-sref="login" ng-click="headlines.resetValues()">Try Again?</h3>
+	<h3 ui-sref="login" ng-click="headlines.resetValues()" class="try-again">Try again?</h3>
+</div>
