--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -2,10 +2,9 @@
 <html lang="en" ng-app="jogOnTimesApp">
 <head>
 	<meta charset="UTF-8">
-	<title>The New York Time Travel Quiz</title>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+  <title>The New York Time Travel Quiz</title>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/locale/uk.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/app.js"></script>
   <script src="js/headlinesController.js"></script>
@@ -27,8 +26,11 @@
 				<div id="year">
 					<h4 class="year-display">Year: {{ headlines.year }}</h4>
 				</div>
-				<div id="category">
-					<h4 class="category-display">Category: {{ headlines.category }}</h4>
+        <div id="category">
+          <h4 class="category-display">Category: {{ headlines.category }}</h4>
+        </div>
+  			<div id="currentScore">
+					<h4 class="category-display">Score: {{ headlines.score }}</h4>
 				</div>
 			</div>
 			<div id="quiz-box" class="col s6" ui-view></div>
