--- a/frontEnd/navbar.html
+++ b/frontEnd/navbar.html
@@ -1,8 +1,10 @@
 <nav id="navbar">
 	<div id="title-container">
 		<h1 id="title" ui-sref="login" ng-click="headlines.resetValues()">The New York Time Travel</h1>
+    <p>{{ headlines.currentTime }}</p>
 	</div>
 	<div id="time-date">
 		
 	</div>
+
 </nav>
