--- a/frontEnd/quiz.html
+++ b/frontEnd/quiz.html
@@ -1,5 +1,9 @@
+<li id='loadBar' ng-show='!headlines.getHeadlines[0]'>
+<img src="./images/loader.gif">
+</li>
 
-<li ng-init='headlines.getData()'>
+
+<li ng-show='headlines.getHeadlines[0]' ng-init='headlines.getData()'>
 
 
   <div class = "question-text" ng-init= "Q1 = true; A1 = false" ng-show= "Q1" class= "ng-hide">
@@ -7,6 +11,7 @@
         {{headlines.getHeadlines[0].headline[0]}}
         <input ng-model = "headlines.answer" id ="headline-answer" type="text" autofocus>
         {{headlines.getHeadlines[0].headline[1]}}
+        <p id='headlineDate'>{{headlines.getHeadlines[0].date}}</p>
         <p><button class='submit' ng-click="Q1 = false; A1 = true; headlines.updateScore()" >Submit</button></p>
   </div>
 
