added header in there

--- a/frontEnd/navbar.html
+++ b/frontEnd/navbar.html
@@ -4,7 +4,8 @@
 		<h1 id="title" ui-sref="login" ng-click="headlines.resetValues()">The New York Time Travels</h1>
 
 	</div>
-	<div id="time-date">
+	<div class = "header-time">
+    <p class= "time-date"> <span class= "title-spans"> Wednesday, October 21, 2015  </span> | <span class= "title-spans">Today's paper </span> |   <span class= "title-spans">Video </span> | <span class= "title-spans">Get in touch</span></p>
 		
 	</div>
 
