--- a/frontEnd/login.html
+++ b/frontEnd/login.html
@@ -1,4 +1,4 @@
-<div id="instructions" class="instructions-text">
+<div id="instructions"  class="instructions-text">
  
   <p>
     Test your knowledge of history with our newspaper-headlines quiz. We'll give you nine headlines with a random word removed. If you type the right word, you win a point.
@@ -14,7 +14,7 @@
     <label class ="login-label" for="login-input">Enter your name: </label>
     <br>
 		<input type="text" name="login-input" ng-model="local.name">
-		<button class="submit-button" input type="submit" ng-click="local.saveName(e)" ui-sref="setup">Submit</button>
+		<button class="submit-button" input type="submit" ng-click="local.saveName(e);" ui-sref="setup">Submit</button>
 
 
 </div>
